# pypeertalk

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
examples/: peertalk_client.py
pypeertalk/: __init__.py
pypeertalk/core/: pypeertalk_core.pyi
pypeertalk/core/inc/: peertalk_client.h
pypeertalk/core/include/: peertalk_client.h
pypeertalk/core/src/: peertalk_client.cpp  peertalk_pybind.cpp
wheels/: CMakeLists.txt  Dockerfile.aarch64  Dockerfile.x86_64  build_wheels.sh
